--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "standard --fix && istanbul cover jasmine",
-    "test:lint": "npx standard",
+    "lint": "npx standard",
     "dev": "webpack-dev-server --mode development --inline",
-    "build": "webpack --mode production",
-    "end_to_end_test": "node_modules/.bin/cypress run --env host=$TEST_URL",
-    "start": "node_modules/.bin/cypress open --env host=$TEST_URL"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -25,18 +22,13 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.2.1",
     "cssnano": "^4.1.7",
-    "cypress": "^3.7.0",
     "dotenv": "^8.2.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "istanbul": "^0.4.5",
-    "jasmine": "^3.3.1",
     "jsdom": "^15.2.1",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "^5.2.0",
-    "mochawesome": "^4.1.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
@@ -59,23 +51,5 @@
     "lodash": "^4.17.15",
     "sanitize-html": "^1.20.0",
     "tabletop": "^1.6.2"
-  },
-  "peerDependencies": {
-    "mocha": "*"
-  },
-  "standard": {
-    "globals": [
-      "Cypress",
-      "cy",
-      "XMLHttpRequest"
-    ],
-    "env": [
-      "jasmine",
-      "mocha"
-    ],
-    "ignore": [
-      "radar-spec.js",
-      "ref-table-spec.js"
-    ]
   }
 }
