--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "build-your-own-radar",
-  "version": "0.3.0",
+  "name": "tech-radar",
+  "version": "2022.04.01",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "npx standard",
-    "dev": "webpack-dev-server --mode development --inline",
-    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -17,39 +14,7 @@
   ],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^3.2.1",
-    "cssnano": "^4.1.7",
-    "dotenv": "^8.2.0",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "jsdom": "^15.2.1",
-    "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.13.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.5.0",
-    "sass-loader": "^8.0.0",
-    "standard": "^14.3.1",
-    "style-loader": "^1.0.1",
-    "tar": ">=5.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "xmlhttprequest": "^1.8.0",
-    "yargs": "^15.0.2"
   },
   "dependencies": {
-    "chance": "^1.0.18",
-    "d3": "^5.14.2",
-    "d3-tip": "^0.7.1",
-    "jquery": "^3.4.0",
-    "jquery-ui": "^1.12.1",
-    "lodash": "^4.17.15",
-    "sanitize-html": "^1.20.0",
-    "tabletop": "^1.6.2"
   }
 }
