--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "aoe_technology_radar-buildRadar",
+    "build-static": "aoe_technology_radar-createStaticFiles",
+    "generate-json": "aoe_technology_radar-generateJson",
+    "start:static": "python -m http.server 8080"
   },
   "repository": {
     "type": "git",
@@ -13,8 +17,8 @@
     "tech-radar"
   ],
   "license": "AGPL-3.0",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
+    "aoe_technology_radar": "^3.1.2"
   }
 }
